Fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,7 @@ footer p {
 
 .divider {
     width: 100%;
+    margin-bottom: 2rem;
 }
 
 .row{
